--- a/task30.5.html
+++ b/task30.5.html
@@ -163,6 +163,12 @@
         text-transform: capitalize;
         /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
       }
+      @media screen and (max-width= 600px)
+      {
+        h1{
+         height: 600px;
+        }
+      }
      
      
     </style>
