--- a/index.html
+++ b/index.html
@@ -163,10 +163,11 @@
         text-transform: capitalize;
         /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
       }
-      @media screen and (max-width= 600px)
+      @media only screen and (max-width: 400px)
       {
-        h1{
-         height: 600px;
+        .a{
+         width:90%
+         height: 90%;
         }
       }
      
@@ -174,6 +175,7 @@
     </style>
   </head>
   <body>
+    <div class="a">
     <div class="top">
       <div class="to">
         <div class="o">
@@ -300,5 +302,6 @@
         </div>
       </div>
     </div>
+  </div>
   </body>
 </html>
